--- a/src/main/resources/templates/express/complaint/complaint.html
+++ b/src/main/resources/templates/express/complaint/complaint.html
@@ -56,62 +56,62 @@
 				{
 					field : 'userName', 
 					title : '投诉人名',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'userPhone', 
 					title : '联系人方式',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'idCard', 
 					title : '身份证',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'email', 
 					title : '邮箱',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'postalCode', 
 					title : '邮编',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'complaintTheme', 
 					title : '投诉主题',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'complaintContent', 
 					title : '投诉内容',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'complaintReplay', 
 					title : '投诉回复',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'beComplaint', 
 					title : '被投诉单位',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'createBy', 
 					title : '创建人',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'createTime', 
 					title : '创建时间',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'statusStr',
 					title : '状态',
-					sortable: true
+					sortable: false
 				},
 		        {
 		            title: '操作',
