--- a/src/main/resources/templates/express/complaint/myComplaint.html
+++ b/src/main/resources/templates/express/complaint/myComplaint.html
@@ -43,7 +43,7 @@
 
         $(function() {
             var options = {
-                url: prefix + "/list",
+                url: prefix + "/myList",
                 createUrl: prefix + "/add",
                 updateUrl: prefix + "/edit/{id}",
                 removeUrl: prefix + "/remove",
@@ -61,52 +61,52 @@
 				{
 					field : 'userName', 
 					title : '投诉人名',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'userPhone', 
 					title : '联系人方式',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'adress', 
 					title : '投诉人地址',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'complaintTheme', 
 					title : '投诉主题',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'complaintContent', 
 					title : '投诉内容',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'complaintReplay', 
 					title : '投诉回复',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'beComplaint', 
 					title : '被投诉单位',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'createBy', 
 					title : '创建人',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'createTime', 
 					title : '创建时间',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'statusStr',
 					title : '状态',
-					sortable: true
+					sortable: false
 				},
 		        {
 		            title: '操作',
