--- a/src/main/resources/templates/express/freightRate/freightRate.html
+++ b/src/main/resources/templates/express/freightRate/freightRate.html
@@ -63,7 +63,7 @@
                 removeUrl: prefix + "/remove",
 				exportUrl: prefix + "/export",
                 modalName: "运价因子",
-		        showExport: true,
+		        showExport: false,
                 columns: [{
 		            checkbox: true
 		        },
@@ -75,37 +75,37 @@
 				{
 					field : 'sendStationStr',
 					title : '发送站',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'receiveStationStr',
 					title : '接收站',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'priceFactor', 
 					title : '价格因子',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'serviceModeStr',
 					title : '运价号',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'createBy', 
 					title : '创建人',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'createTime', 
 					title : '创建时间',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'statusStr',
 					title : '状态',
-					sortable: true
+					sortable: false
 				},
 		        {
 		            title: '操作',
