--- a/src/main/resources/templates/express/order/order.html
+++ b/src/main/resources/templates/express/order/order.html
@@ -85,139 +85,139 @@
                 removeUrl: prefix + "/remove",
 				exportUrl: prefix + "/export",
                 modalName: "订单",
-		        showExport: true,
+		        showExport: false,
                 columns: [{
 		            checkbox: true
 		        },
 				{
 					field : 'orderNo', 
 					title : '订单编号',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'sendTime', 
 					title : '发货日期',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'sendProvinceStr',
 					title : '发送省份',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'sendCityStr',
 					title : '发送城市',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'receiveProvinceStr',
 					title : '接收省份',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'receiveCityStr',
 					title : '接收城市',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'sendStationStr',
 					title : '发送车站',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'receiveStationStr',
 					title : '接收车站',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'customerNo', 
 					title : '客户编码',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'customerTypeStr',
 					title : '客户类型',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'sendName', 
 					title : '发货人名称',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'sendContacts', 
 					title : '发货联系人',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'sendPhone', 
 					title : '发货人电话',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'receiveName', 
 					title : '收货人名称',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'receiveContacts', 
 					title : '收货联系人',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'receivePhone', 
 					title : '接收人电话',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'serviceModeStr',
 					title : '服务方式',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'pickUpMileage', 
 					title : '送货里程',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'deliveryMileage', 
 					title : '送货里程',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'pickUpDress', 
 					title : '取货地址',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'deliveryDress', 
 					title : '送货地址',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'remark', 
 					title : '商议事项',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'invoiceStr',
 					title : '是否开具发票',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'statusStr',
 					title : '状态',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'createBy', 
 					title : '创建人',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'createTime', 
 					title : '创建时间',
-					sortable: true
+					sortable: false
 				},
 		        {
 		            title: '操作',
