--- a/src/main/resources/templates/express/orderDress/orderDress.html
+++ b/src/main/resources/templates/express/orderDress/orderDress.html
@@ -55,7 +55,7 @@
                 removeUrl: prefix + "/remove",
 				// exportUrl: prefix + "/export",
                 modalName: "订单地址",
-		        showExport: true,
+		        showExport: false,
                 columns: [{
 		            checkbox: true
 		        },
@@ -67,37 +67,37 @@
 				{
 					field : 'orderNo', 
 					title : '订单编号',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'provinceStr',
 					title : '省份编码',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'cityStr',
 					title : '城市编码',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'dress', 
 					title : '地址',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'updateBy', 
 					title : '修改人',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'updateTime', 
 					title : '修改时间',
-					sortable: true
+					sortable: false
 				},
 				{
 					field : 'remark', 
 					title : '备注',
-					sortable: true
+					sortable: false
 				},
 		        {
 		            title: '操作',
