--- a/src/main/resources/templates/express/complaint/myComplaint.html
+++ b/src/main/resources/templates/express/complaint/myComplaint.html
@@ -26,7 +26,7 @@
 			</div>
 			
 	        <div class="btn-group-sm" id="toolbar" role="group">
-				<a class="btn btn-success" onclick="createMenuItem('express/complaint/add','我要投诉建议')" shiro:hasPermission="express:complaint:add">
+				<a class="btn btn-success" onclick="createMenuItem('express/complaint/add','我要投诉建议')" >
 					<i class="fa fa-plus"></i> 我要投诉
 				</a>
 			</div>
