--- a/src/main/resources/templates/express/order/edit.html
+++ b/src/main/resources/templates/express/order/edit.html
@@ -256,7 +256,7 @@
 
 			// var invoice = $("input[id='invoice']").is(':checked') == true ? 1 : 0;
 			// data.push({"name": "invoice", "value": invoice});
-			$.operate.addTab(prefix + "/edit", data);
+			$.operate.saveTab(prefix + "/edit", data);
 		}
 	}
 
