--- a/src/main/resources/templates/express/orderDress/orderDress.html
+++ b/src/main/resources/templates/express/orderDress/orderDress.html
@@ -71,12 +71,12 @@
 				},
 				{
 					field : 'provinceStr',
-					title : '省份编码',
+					title : '当前省份',
 					sortable: false
 				},
 				{
 					field : 'cityStr',
-					title : '城市编码',
+					title : '当前城市',
 					sortable: false
 				},
 				{
