--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html  lang="zh" xmlns:th="http://www.thymeleaf.org">
+<html lang="zh" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,16 +11,27 @@
     <link href="../static/css/main/animate.min.css" th:href="@{/css/main/animate.min.css}" rel="stylesheet"/>
     <link href="../static/css/main/style.min862f.css" th:href="@{/css/main/style.min862f.css}" rel="stylesheet"/>
 </head>
+<style>
+
+
+</style>
+
 
 <body class="gray-bg">
-    <div class="row  border-bottom white-bg dashboard-header">
+<div class="row  border-bottom white-bg dashboard-header">
 
 
+</div>
+<div class="wrapper wrapper-content "
+     style="background: url(../../img/3.jpg) no-repeat; background-size:100% 100%;height: 90%;">
+    <div>
+        <h1 style="text-align: center;margin: 0 auto;">欢迎使用铁路零散货物快运信息管理系统</h1>
+        <div style="margin-top: 50px;">
+            <h3  style="text-align: center;margin: 0 auto;">为您提供“随办随到、敞开受理、有货就装”的快速、便捷、高效的铁路运输服务</h3>
+        </div>
     </div>
-    <div class="wrapper wrapper-content">
-
-    </div>
-    <script th:src="@{/js/jquery.min.js}"></script>
-    <script th:src="@{/js/bootstrap.min.js}"></script>
+</div>
+<script th:src="@{/js/jquery.min.js}"></script>
+<script th:src="@{/js/bootstrap.min.js}"></script>
 </body>
 </html>
