--- a/src/main/resources/templates/signUp.html
+++ b/src/main/resources/templates/signUp.html
@@ -16,17 +16,6 @@
                     </div>
                 </div>
             </div>
-            <!--<div class="col-sm-6">-->
-                <!--<div class="form-group">-->
-                    <!--<label class="col-sm-4 control-label"><span style="color: red; ">*</span>归属部门：</label>-->
-                    <!--<div class="col-sm-8">-->
-                        <!--<div class="input-group">-->
-                            <!--<input name="deptName" onclick="selectDeptTree()" id="treeName" type="text" placeholder="请选择归属部门" class="form-control" required>-->
-                            <!--<span class="input-group-addon"><i class="fa fa-search"></i></span>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
             <div class="col-sm-6">
                 <div class="form-group">
                     <label class="col-sm-4 control-label">用户性别：</label>
@@ -76,58 +65,6 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <!--<div class="col-sm-6">-->
-                <!--<div class="form-group">-->
-                    <!--<label class="col-sm-4 control-label">用户性别：</label>-->
-                    <!--<div class="col-sm-8">-->
-                        <!--<div class="input-group" style="width: 100%">-->
-                            <!--<select name="sex" class="form-control m-b" th:with="type=${@dict.getType('sys_user_sex')}">-->
-                                <!--<option th:each="dict : ${type}" th:text="${dict.dictLabel}" th:value="${dict.dictValue}"></option>-->
-                            <!--</select>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
-            <!--<div class="col-sm-6">-->
-                <!--<div class="form-group">-->
-                    <!--<label class="col-sm-4 control-label">用户状态：</label>-->
-                    <!--<div class="col-sm-8">-->
-                        <!--<div class="onoffswitch">-->
-                            <!--<input type="checkbox" th:checked="true" class="onoffswitch-checkbox" id="status">-->
-                            <!--<label class="onoffswitch-label" for="status">-->
-                                <!--<span class="onoffswitch-inner"></span>-->
-                                <!--<span class="onoffswitch-switch"></span>-->
-                            <!--</label>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
-        </div>
-        <!--<div class="row">-->
-            <!--<div class="col-sm-12">-->
-                <!--<div class="form-group">-->
-                    <!--<label class="col-xs-2 control-label">岗位：</label>-->
-                    <!--<div class="col-xs-4">-->
-                        <!--<select id="post" class="form-control select2-hidden-accessible" multiple="">-->
-                            <!--<option th:each="post:${posts}" th:value="${post.postId}" th:text="${post.postName}" th:disabled="${post.status == '1'}"></option>-->
-                        <!--</select>-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
-        <!--<div class="row">-->
-            <!--<div class="col-sm-12">-->
-                <!--<div class="form-group">-->
-                    <!--<label class="col-xs-2 control-label">角色：</label>-->
-                    <!--<div class="col-xs-10">-->
-                        <!--<label th:each="role:${roles}" class="check-box">-->
-                            <!--<input name="role" type="checkbox" th:value="${role.roleId}" th:text="${role.roleName}" th:disabled="${role.status == '1'}">-->
-                        <!--</label>-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
         <h4 class="form-header h4">其他信息</h4>
         <div class="row">
             <div class="col-sm-12">
@@ -141,12 +78,12 @@
         </div>
     </form>
 </div>
-<div class="row">
-    <div class="col-sm-offset-5 col-sm-10">
-        <button type="button" class="btn btn-sm btn-primary" onclick="submitHandler()"><i class="fa fa-check"></i>保 存</button>&nbsp;
-        <button type="button" class="btn btn-sm btn-danger" onclick="closeItem()"><i class="fa fa-reply-all"></i>关 闭 </button>
-    </div>
-</div>
+<!--<div class="row">-->
+    <!--<div class="col-sm-offset-5 col-sm-10">-->
+        <!--<button type="button" class="btn btn-sm btn-primary" onclick="submitHandler()"><i class="fa fa-check"></i>保 存</button>&nbsp;-->
+        <!--<button type="button" class="btn btn-sm btn-danger" onclick="closeItem()"><i class="fa fa-reply-all"></i>关 闭 </button>-->
+    <!--</div>-->
+<!--</div>-->
 <div th:include="include::footer"></div>
 <script th:src="@{/ajax/libs/select/select2.js}"></script>
 <script>
@@ -235,33 +172,32 @@
             $.operate.save(prefix + "/signUpSave", data)
 
 
-            // $.operate.saveTab(prefix + "/signUpSave", data);
         }
     }
 
     /*用户管理-新增-选择部门树*/
-    function selectDeptTree() {
-        var treeId = $("#treeId").val();
-        var deptId = $.common.isEmpty(treeId) ? "100" : $("#treeId").val();
-        var url = ctx + "system/dept/selectDeptTree/" + deptId;
-        var options = {
-            title: '选择部门',
-            width: "380",
-            url: ctx + "system/dept/selectDeptTree/" + deptId,
-            callBack: doSubmit
-        };
-        $.modal.openOptions(options);
-    }
-
-    function doSubmit(index, layero){
-        var tree = layero.find("iframe")[0].contentWindow.$._tree;
-        if ($.tree.notAllowParents(tree)) {
-            var body = layer.getChildFrame('body', index);
-            $("#treeId").val(body.find('#treeId').val());
-            $("#treeName").val(body.find('#treeName').val());
-            layer.close(index);
-        }
-    }
+    // function selectDeptTree() {
+    //     var treeId = $("#treeId").val();
+    //     var deptId = $.common.isEmpty(treeId) ? "100" : $("#treeId").val();
+    //     var url = ctx + "system/dept/selectDeptTree/" + deptId;
+    //     var options = {
+    //         title: '选择部门',
+    //         width: "380",
+    //         url: ctx + "system/dept/selectDeptTree/" + deptId,
+    //         callBack: doSubmit
+    //     };
+    //     $.modal.openOptions(options);
+    // }
+    //
+    // function doSubmit(index, layero){
+    //     var tree = layero.find("iframe")[0].contentWindow.$._tree;
+    //     if ($.tree.notAllowParents(tree)) {
+    //         var body = layer.getChildFrame('body', index);
+    //         $("#treeId").val(body.find('#treeId').val());
+    //         $("#treeName").val(body.find('#treeName').val());
+    //         layer.close(index);
+    //     }
+    // }
 </script>
 </body>
 </html>
